--- a/estilos/style.css
+++ b/estilos/style.css
@@ -15,6 +15,7 @@ html, body{
 main{
     position: relative;
     height: 100vh;
+    width: 100vw;
     background: url(../imagens/fundo-madeira.jpg) no-repeat top center;
     background-size: cover;
     background-attachment: fixed;
@@ -32,9 +33,9 @@ section#telefone{
 
 #tela{
     position: relative;
-    top: 80.8px;
-    left: 22.5px;
-    height: 470.9px;
+    top: 80px;
+    left: 22px;
+    height: 471px;
     width: 265.5px;
 }
 
@@ -55,4 +56,9 @@ section#telefone{
     translate: -3px -3px;
     box-shadow: 5px 5px 6px rgba(0, 0, 0, 0.349);
     transition: .1s;
+}
+
+::-webkit-scrollbar{
+    width: 0;
+    height: 0;
 }
